kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app1
  name: svc-app1
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: app1
  type: ClusterIP
